--- a/AUTOCAREHUB/src/app/components/invoice-viewer/invoice-viewer.component.css
+++ b/AUTOCAREHUB/src/app/components/invoice-viewer/invoice-viewer.component.css
@@ -1,5 +1,5 @@
 #invoicePreviewModal {
-  display: none; 
+  display: none;
   position: fixed;
   z-index: 1;
   left: 0;
@@ -7,8 +7,8 @@
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
