--- a/AUTOCAREHUB/src/app/components/register-vehicle/register-vehicle.component.css
+++ b/AUTOCAREHUB/src/app/components/register-vehicle/register-vehicle.component.css
@@ -44,7 +44,7 @@
 
 .register-vehicle form button {
   padding: 10px;
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   border: none;
   border-radius: 4px;
