--- a/AUTOCAREHUB/src/app/components/make-appointment/make-appointment.component.css
+++ b/AUTOCAREHUB/src/app/components/make-appointment/make-appointment.component.css
@@ -27,6 +27,16 @@ h2 {
   text-align: center;
 }
 
+.success-message {
+  background-color: #e8f5e9;
+  color: #2e7d32;
+  padding: 10px;
+  border-radius: 4px;
+  margin-bottom: 20px;
+  text-align: center;
+  border: 1px solid #a5d6a7;
+}
+
 /* Pagination Controls */
 .pagination-controls {
   display: flex;
