se hace que no se pueda seleccionar una fecha pasada para pedir una cita, se arregla el bug de los estilos dentro del chat de la web, y se recompila la web con los cambios hechos

--- a/AUTOCAREHUB/src/app/components/make-appointment/make-appointment.component.html
+++ b/AUTOCAREHUB/src/app/components/make-appointment/make-appointment.component.html
@@ -45,16 +45,23 @@
         <div
           *ngFor="let slot of monthSlots[dateKey]"
           class="slot"
-          [class.occupied]="slot.estado === 'Ocupada'"
-          [class.available]="slot.estado === 'Disponible'"
+          [class.occupied]="
+            slot.estado === 'Ocupada' || isPastDateTime(dateKey, slot.hora)
+          "
+          [class.available]="
+            slot.estado === 'Disponible' && !isPastDateTime(dateKey, slot.hora)
+          "
           [class.selected]="isSelected(dateKey, slot.hora)"
           (click)="
             slot.estado === 'Disponible' &&
+              !isPastDateTime(dateKey, slot.hora) &&
               toggleSlotSelection(dateKey, slot.hora)
           "
         >
           <span class="time">{{ slot.hora }}</span>
-          <span class="status">{{ slot.estado }}</span>
+          <span class="status">{{
+            isPastDateTime(dateKey, slot.hora) ? "Pasada" : slot.estado
+          }}</span>
         </div>
       </div>
     </div>
