se añade la columna de taller en el visor de facturas, se hace mas pequeño el componente de make-appointment,para que toda la info coja en la pantalla, y se compila toda la web

--- a/AUTOCAREHUB/src/app/components/invoice-viewer/invoice-viewer.component.html
+++ b/AUTOCAREHUB/src/app/components/invoice-viewer/invoice-viewer.component.html
@@ -8,6 +8,7 @@
     <thead>
       <tr>
         <th>Fecha</th>
+        <th>Taller</th>
         <th>Total</th>
         <th>Estado</th>
         <th>Acciones</th>
@@ -16,6 +17,7 @@
     <tbody>
       <tr *ngFor="let invoice of invoices">
         <td>{{ invoice.Date }}</td>
+        <td>{{ invoice.WorkshopName }}</td>
         <td>{{ invoice.TotalAmount }} €</td>
         <td>{{ invoice.Estado }}</td>
         <td>
